--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
